--- a/Personal_Website/css/style.css
+++ b/Personal_Website/css/style.css
@@ -4,3 +4,137 @@ Here is a description of any special CSS used.
 By default that's nothing.
 
 **********************************************/
+
+body {
+    background-color: black;
+    top: 0px;
+    left: 0px;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+.wrapper {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    z-index: 10;
+}
+
+#roll-hole {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-15%, 75%);
+    border-radius: 50%;
+    width: 20vw;
+    max-width: 200px;
+    height: 20vw;
+    max-height: 200px;
+    background: rgb(0, 0, 0);
+    z-index: 99;
+}
+
+#roll-dark-side {
+    position: absolute;
+    border-radius: 50%;
+    background: rgb(255, 255, 255);
+    z-index: 50;
+}
+
+#roll-bright-side {
+    position: absolute;
+    border-radius: 50%;
+    background: rgb(196, 196, 196);
+    z-index: 98;
+}
+
+#roll-middle {
+    position: absolute;
+    background: rgb(255, 255, 255);
+    z-index: 75;
+}
+
+#curtain-top {
+    position: absolute;
+    background:rgb(0, 0, 0);
+    width: 100%;
+    z-index: 25;
+}
+
+#curtain-right {
+    position: absolute;
+    background:rgb(0, 0, 0);
+    width: 100%;
+    z-index: 25;
+}
+
+#line {
+    position:fixed;
+    border-top: 2px solid #000000;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 0;
+    border-style: dashed;
+    z-index: 95;
+    width: 55vw;
+}
+
+#paper-container {
+    position: fixed;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+}
+
+::-webkit-scrollbar {
+    width: 0;
+  }
+
+#paper {
+    position: absolute;
+    
+    width: 100%;
+}
+
+.sheet {
+    border-top: 2px solid #747474;
+    background-color: #eeeeee;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 0;
+    border-style: dashed;
+}
+
+.empty-sheet {
+    height: 14rem;
+    width: 100%;
+    margin: 2rem 0;
+}
+
+.item-container {
+    cursor: grab;
+    padding: 0px 2rem;
+    overflow-x: hidden;
+    cursor: default;
+}
+
+.item {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    border: 1px solid #cbd5e0;
+    font-size: 2.25rem;
+    height: 25vw;
+    max-height: 350px;
+    margin: 2rem 0;
+    width: 100%;
+}
