--- a/Personal_Website/css/style.css
+++ b/Personal_Website/css/style.css
@@ -90,7 +90,7 @@ body {
 
 #paper-container {
     position: fixed;
-    overflow: auto;
+    overflow: hidden;
     width: 100%;
     height: 100%;
 }
@@ -115,26 +115,36 @@ body {
 }
 
 .empty-sheet {
-    height: 14rem;
+    height: 25vw;
     width: 100%;
     margin: 2rem 0;
 }
 
 .item-container {
     cursor: grab;
-    padding: 0px 2rem;
+    padding: 0px 1.5vw;
     overflow-x: hidden;
+    overflow-y: auto;
     cursor: default;
+    max-width: 100%;
 }
 
 .item {
     align-items: center;
     display: flex;
     justify-content: center;
-    border: 1px solid #cbd5e0;
+    /* border: 1px solid #cbd5e0; */
     font-size: 2.25rem;
     height: 25vw;
     max-height: 350px;
     margin: 2rem 0;
     width: 100%;
+}
+
+.content {
+    height: 100%;
+    width: 100%;
+    text-align: justify;
+    font-family: sans-serif;
+    font-size: 2vw;
 }
