--- a/Personal_Website/css/style.css
+++ b/Personal_Website/css/style.css
@@ -4,6 +4,13 @@ Here is a description of any special CSS used.
 By default that's nothing.
 
 **********************************************/
+@font-face {
+    font-family: "Gazpacho Heavy";
+    src: url("../assets/fonts/gazpacho/Gazpacho Heavy.ttf");
+
+    font-family: "helvetica";
+    src: url("../assets/fonts/Helvetica.ttf");
+}
 
 body {
     background-color: black;
@@ -15,6 +22,30 @@ body {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+}
+
+h1 {
+    font-family: "Gazpacho Heavy";
+    text-align: center;
+    display:table-cell;
+}
+
+#propaganda {
+    color: #f75108;
+    vertical-align:middle;
+}
+
+#propaganda-content {
+    display:table;
+}
+
+p {
+    font-family: "helvetica";
+    font-size: large;
+}
+
+.item-invisible {
+    visibility: hidden;
 }
 
 .wrapper {
@@ -36,9 +67,9 @@ body {
     transform: translate(-15%, 75%);
     border-radius: 50%;
     width: 20vw;
-    max-width: 200px;
+    max-width: 175px;
     height: 20vw;
-    max-height: 200px;
+    max-height: 175px;
     background: rgb(0, 0, 0);
     z-index: 99;
 }
@@ -115,7 +146,7 @@ body {
 }
 
 .empty-sheet {
-    height: 25vw;
+    height: 20vw;
     width: 100%;
     margin: 2rem 0;
 }
@@ -135,7 +166,7 @@ body {
     justify-content: center;
     /* border: 1px solid #cbd5e0; */
     font-size: 2.25rem;
-    height: 25vw;
+    height: 20vw;
     max-height: 350px;
     margin: 2rem 0;
     width: 100%;
@@ -145,6 +176,5 @@ body {
     height: 100%;
     width: 100%;
     text-align: justify;
-    font-family: sans-serif;
     font-size: 2vw;
 }
