--- a/Personal_Website/css/style.css
+++ b/Personal_Website/css/style.css
@@ -28,6 +28,7 @@ h1 {
     font-family: "Gazpacho Heavy";
     text-align: center;
     display:table-cell;
+    font-size: larger;
 }
 
 #propaganda {
@@ -67,9 +68,9 @@ p {
     transform: translate(-15%, 75%);
     border-radius: 50%;
     width: 20vw;
-    max-width: 175px;
+    max-width: 150px;
     height: 20vw;
-    max-height: 175px;
+    max-height: 150px;
     background: rgb(0, 0, 0);
     z-index: 99;
 }
@@ -116,7 +117,7 @@ p {
     border-bottom: 0;
     border-style: dashed;
     z-index: 95;
-    width: 55vw;
+    width: 53vw;
 }
 
 #paper-container {
@@ -146,7 +147,7 @@ p {
 }
 
 .empty-sheet {
-    height: 20vw;
+    height: 15vw;
     width: 100%;
     margin: 2rem 0;
 }
@@ -166,7 +167,7 @@ p {
     justify-content: center;
     /* border: 1px solid #cbd5e0; */
     font-size: 2.25rem;
-    height: 20vw;
+    height: 15vw;
     max-height: 350px;
     margin: 2rem 0;
     width: 100%;
