--- a/Personal_Website/css/style.css
+++ b/Personal_Website/css/style.css
@@ -6,10 +6,16 @@ By default that's nothing.
 **********************************************/
 @font-face {
     font-family: "Gazpacho Heavy";
-    src: url("../assets/fonts/gazpacho/Gazpacho Heavy.ttf");
+    src: url("/assets/fonts/gazpacho/GazpachoHeavy.ttf") format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
+@font-face {
     font-family: "helvetica";
-    src: url("../assets/fonts/Helvetica.ttf");
+    src: url("/assets/fonts/Helvetica.ttf") format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 body {
@@ -43,6 +49,32 @@ h1 {
 p {
     font-family: "helvetica";
     font-size: large;
+}
+
+#button-container {
+    position: fixed;
+    margin: 2rem;
+    z-index: 150;
+}
+
+button {
+    background-color: transparent;
+    border: 2px solid #b9b9b9;
+    font-family: "Gazpacho Heavy";
+    color: #b9b9b9;
+    font-size: 2vw;
+}
+
+button:hover {
+    border: 2px solid #ffffff;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+button:active {
+    border: 2px solid rgb(116, 116, 116);
+    color: rgb(116, 116, 116);
+    margin: 0.1vw;
 }
 
 .item-invisible {
@@ -111,7 +143,7 @@ p {
 
 #line {
     position:fixed;
-    border-top: 2px solid #000000;
+    border-top: 2px #000000;
     border-left: 0;
     border-right: 0;
     border-bottom: 0;
